fix: status OK and skip resend code if requested code within CD period
